--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,7 @@ debug=true
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+# Hibernate JDBC oturum saat dilimi (DB'ye UTC gönder/DB'den UTC al)
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC
+spring.jackson.time-zone=UTC
