--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,8 @@ spring.h2.console.enabled=true
 debug=true
 
 spring.jpa.hibernate.ddl-auto=update
+spring.sql.init.mode=always
+spring.jpa.defer-datasource-initialization=true
 spring.jpa.show-sql=true
 
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
