Authentication with JWT token

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,7 @@ spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 spring.jackson.time-zone=UTC
 
 logging.level.org.springframework.boot.autoconfigure=INFO
+
+security.jwt.secret=01992d1b-e22c-7d98-ab0c-81246b757a91
+security.jwt.expiration=3600000
+security.jwt.issuer=taskloom
